Finito, rimosso scrollbar . fixato navbar down

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@
     align-items: center;
     top: 0;
     left: 0;
-    height: 30px;
+    height: 3vh;
     width: 100%;
     z-index: 500;
     background-color: rgb(22, 22, 22);
+    padding: 0 2px 0 5px;
     /* debug */
     /* border: 2px solid white; */
 }
@@ -40,13 +41,14 @@
     flex-flow: row wrap;
     background-color: rgb(22,22,22);
     z-index: 0;
-    overflow-y: scroll;
-    height: 100vh;
+    height: 90%vh;
     /* debug */
+    padding: 50px 50px 50px 50px;
+
 }
 .col {
-
     position: relative;
+    padding: 5px;
 } 
 .col img{
     max-width: 100%;
@@ -65,10 +67,12 @@
 /* navbar down aka footer rules */
 .navbar_down {
     position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
-    position: relative;
     justify-content: space-between;
     align-content: center;
+    height: 7vh;
     width: 100%;
     background-color: rgb(49, 49, 49);
     z-index:1;
